--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,18 +47,17 @@ import { Image } from 'astro:assets'
     gap: 2rem;
     flex-wrap: wrap-reverse;
     justify-content: center;
-    height: 284px;
+    min-height: 284px;
     #historia {
       display: flex;
       flex-direction: column;
-      height: 100%;
+      height: 284px;
       justify-content: space-between;
       align-items: center;
     }
   }
 
   h1 {
-    width: 100%;
     font-size: 5rem;
     color: var(--link);
     margin-top: -30px;
