--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,9 +6,9 @@ import { Image } from 'astro:assets'
   <menu>
     <a href="/contacto">CONTACTO</a>
 
-    <div>
+    <a href="/">
       <Image width={100} height={100} src="/favicon.svg" alt="logo empresa" />
-    </div>
+    </a>
 
     <a href="/menu">CARTA</a>
   </menu>
@@ -33,3 +33,10 @@ import { Image } from 'astro:assets'
     max-height: 100%;
   }
 </style>
+
+<script>
+  const homeLogo = document.getElementById('homeLogo')
+  if (homeLogo) {
+    homeLogo.addEventListener('click', () => (window.location.href = '/'))
+  }
+</script>
