--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
   --primary: rgb(26, 68, 83);
   --secondary: rgb(90, 127, 141);
   --link: rgb(255, 237, 209);
-  --: rgb(253, 247, 238);
+  --link-light: rgb(253, 247, 238);
 }
 * {
   margin: 0;
@@ -16,7 +16,8 @@ body {
   font-family: 'Oswald', sans-serif;
   margin: 0;
   width: 100%;
-  height: 100%;
+
+  min-height: 100vh;
 }
 html {
   background-color: transparent;
