--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
       <p>Creado por Alejandro Guzmán</p>
     </div>
     <div id="linksPage">
-      <a href="/menu">Carta</a>
+      <a href="/carta">Carta</a>
       <a href="/contacto">Contacto</a>
       <a href="/">Home</a>
     </div>
