--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,15 +1,20 @@
 ---
 import { Image } from 'astro:assets'
-import screenShot from '../assets/screenshot.png'
+import zamburinas from '../assets/zamburinas.jpg'
+import sardinas from '../assets/sardinas.jpg'
+
+import pulpo from '../assets/pulpogallega.jpg'
+
+import boquerones from '../assets/boquerones.jpeg'
 ---
 
-<div style="width: fit-content;">
+<div class="container-carousel">
   <div class="carousel">
     <div class="carousel-images">
-      <Image loading={'lazy'} src={screenShot} alt="Image 3" />
-      <Image loading={'lazy'} src={screenShot} alt="Image 2" />
-      <Image loading={'lazy'} src={screenShot} alt="Image 3" />
-      <Image loading={'lazy'} src={screenShot} alt="Image 2" />
+      <Image loading={'lazy'} src={zamburinas} alt="Image 3" />
+      <Image loading={'lazy'} src={sardinas} alt="Image 2" />
+      <img loading={'lazy'} src={pulpo.src} alt="Image 3" />
+      <Image loading={'lazy'} src={boquerones} alt="Image 2" />
     </div>
     <div class="carousel-buttons">
       <button id="prev">{'<'}</button>
@@ -20,9 +25,9 @@ import screenShot from '../assets/screenshot.png'
 </div>
 <style>
   .carousel {
-    width: 100%;
     position: relative;
-    max-width: 600px;
+    width: 600px;
+    aspect-ratio: 6/2.84;
     border-radius: 5px;
     z-index: 5;
     overflow: hidden;
@@ -40,23 +45,22 @@ import screenShot from '../assets/screenshot.png'
   .carousel img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    display: block;
   }
   .carousel-buttons {
     position: absolute;
     top: 50%;
     width: 100%;
+    aspect-ratio: 6/2.84;
     display: flex;
     justify-content: space-between;
     transform: translateY(-50%);
     transition: all 200ms ease-out;
-  }
-  .carousel-buttons {
     button {
       background: transparent;
       color: var(--secondary);
       border: none;
-      height: 400px;
+      height: 100%;
       font-size: 50px;
       padding: 10px;
       cursor: pointer;
@@ -66,6 +70,7 @@ import screenShot from '../assets/screenshot.png'
       color: var(--primary);
     }
   }
+
   .carousel-indicators {
     display: flex;
     justify-content: center;
@@ -86,61 +91,71 @@ import screenShot from '../assets/screenshot.png'
       background-color: var(--link);
     }
   }
+  @media only screen and (max-width: 630px) {
+    .carousel {
+      width: 100vw;
+      height: auto;
+    }
+  }
 </style>
 
 <script>
-  const images = document.querySelector('.carousel-images') as HTMLImageElement
-  const imagesContainer = document.querySelector('.carousel-buttons')
-  if (images) {
-    const totalImages = images.children.length
-    let index = 0
+  document.addEventListener('astro:page-load', () => {
+    const images = document.querySelector('.carousel-images') as HTMLImageElement
+    const imagesContainer = document.querySelector('.carousel-buttons')
 
-    function updateCarousel() {
-      images.style.transform = `translateX(-${index * 100}%)`
-      document.querySelectorAll('.carousel-indicators button').forEach((btn, i) => {
-        btn.classList.toggle('active', i === index)
+    if (images) {
+      const totalImages = images.children.length
+      let index = 0
+      function createIndicators() {
+        const indicators = document.getElementById('indicators')
+        for (let i = 0; i < totalImages; i++) {
+          const button = document.createElement('button')
+          button.addEventListener('click', () => {
+            index = i
+            updateCarousel()
+          })
+
+          indicators!.appendChild(button)
+        }
+      }
+      function updateCarousel() {
+        images.style.transform = `translateX(-${index * 100}%)`
+        document.querySelectorAll('.carousel-indicators button').forEach((btn, i) => {
+          btn.classList.toggle('active', i === index)
+        })
+      }
+      const next = document.getElementById('next')
+      const prev = document.getElementById('prev')
+
+      next!.addEventListener('click', () => {
+        index = (index + 1) % totalImages
+        updateCarousel()
       })
-    }
-    const next = document.getElementById('next')
-    const prev = document.getElementById('prev')
+      next!.addEventListener('mouseover', () => {
+        imagesContainer!.classList.add('carousel-hover-button-right')
+      })
+      next!.addEventListener('mouseout', () => {
+        imagesContainer!.classList.remove('carousel-hover-button-right')
+      })
+      prev!.addEventListener('mouseover', () => {
+        imagesContainer!.classList.add('carousel-hover-button-left')
+      })
+      prev!.addEventListener('mouseout', () => {
+        imagesContainer!.classList.remove('carousel-hover-button-left')
+      })
 
-    next!.addEventListener('click', () => {
-      index = (index + 1) % totalImages
-      updateCarousel()
-    })
-    next!.addEventListener('mouseover', () => {
-      imagesContainer!.classList.add('carousel-hover-button-right')
-    })
-    next!.addEventListener('mouseout', () => {
-      imagesContainer!.classList.remove('carousel-hover-button-right')
-    })
-    prev!.addEventListener('mouseover', () => {
-      imagesContainer!.classList.add('carousel-hover-button-left')
-    })
-    prev!.addEventListener('mouseout', () => {
-      imagesContainer!.classList.remove('carousel-hover-button-left')
-    })
-
-    prev!.addEventListener('click', () => {
-      index = (index - 1 + totalImages) % totalImages
-      updateCarousel()
-    })
-
-    setInterval(() => {
-      index = (index + 1) % totalImages
-      updateCarousel()
-    }, 10000)
-
-    const indicators = document.getElementById('indicators')
-    for (let i = 0; i < totalImages; i++) {
-      const button = document.createElement('button')
-      button.addEventListener('click', () => {
-        index = i
+      prev!.addEventListener('click', () => {
+        index = (index - 1 + totalImages) % totalImages
         updateCarousel()
       })
 
-      indicators!.appendChild(button)
+      setInterval(() => {
+        index = (index + 1) % totalImages
+        updateCarousel()
+      }, 10000)
+      createIndicators()
+      updateCarousel()
     }
-    updateCarousel()
-  }
+  })
 </script>
