--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -2,4 +2,93 @@
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout />
+<Layout>
+  <header>
+    <h1>CONTACTO</h1>
+  </header>
+  <main>
+    <div class="container">
+      <form action="/enviar-contacto" method="POST">
+        <div class="form-group">
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="nombre" required placeholder="Tu nombre" />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Correo electrónico</label>
+          <input type="email" id="email" name="email" required placeholder="Tu correo electrónico" />
+        </div>
+
+        <div class="form-group">
+          <label for="mensaje">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" rows="4" required placeholder="Tu mensaje aquí"></textarea>
+        </div>
+
+        <div class="form-group">
+          <button type="submit">Enviar mensaje</button>
+        </div>
+      </form>
+    </div>
+  </main>
+</Layout>
+<style>
+  h1 {
+    text-align: center;
+    font-size: 5rem;
+    color: var(--link);
+    margin-top: -30px;
+  }
+  .container {
+    width: 100%;
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: var(--primary);
+    border-radius: 2px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+
+  label {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 8px;
+    color: var(--link-light);
+  }
+
+  input[type='text'],
+  input[type='email'],
+  textarea {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 2px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    box-sizing: border-box;
+  }
+
+  textarea {
+    resize: vertical;
+    min-height: 90px;
+  }
+
+  button {
+    width: 100%;
+    padding: 12px;
+    background-color: var(--link);
+    font-weight: 600;
+    color: var(--primary);
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: var(--link-light);
+  }
+</style>
