--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,31 +14,40 @@ import { Image } from 'astro:assets'
     <Carousel />
     <section id="historia">
       <h1 transition:name="name-site">TIERRITA MÍA</h1>
-      <!-- <p style="max-width: 75ch; color: var(--link);">
-        En el corazón de Torre del Mar, donde el mar besa la arena y las noches tienen su propia banda sonora, nació
-        Tierrita Mía. Más que un bar, es un punto de encuentro para quienes buscan buena música, cócteles innovadores y
-        un ambiente que te hace sentir como en casa desde el primer sorbo. <br /> Detrás de este proyecto están Pepe y María,
-        amantes de la buena vida y apasionados por la hospitalidad. Su sueño siempre fue crear un espacio donde cada cliente
-        viviera una experiencia única, combinando lo mejor de la coctelería moderna con la esencia vibrante de Torre del
-        Mar.
-        <br /> Desde su apertura, Tierrita Mía ha sido un refugio para locales y viajeros, donde cada noche es diferente
-        y cada trago cuenta una historia. Aquí, las luces tenues, la decoración contemporánea y la música cuidadosamente
-        seleccionada crean el escenario perfecto para disfrutar sin prisas. <br /> Ya sea que vengas por un cóctel de autor,
-        una charla con amigos o simplemente a disfrutar de la brisa marina con un buen vino en la mano, en Tierrita Mía siempre
-        hay un rincón esperándote. Bienvenidos a nuestra historia. <br /> ¿Nos tomamos algo? 🍸✨
-      </p> -->
       <p>
         "Cada bocado es un viaje a las recetas de la abuela, donde el sabor del mar se encuentra con la tradición.
         Pescado fresco, cariño en cada plato y el auténtico sabor de nuestra tierra."
       </p>
       <div id="buttonsInit">
-        <Button id="llamar" text="Llamar" type="button" link="/contacto" />
-        <Button id="localizacion" type="button" link="/localizacion">
-          <Image width={50} style={{ height: '100%', width: 'auto' }} src={waIcon} alt={'whatsapp'} />
+        <Button id="llamar" text="Llamar a 626591157" type="button" link={{ link: 'tel:+34626591157', newTab: true }} />
+        <Button
+          id="localizacion"
+          type="button"
+          text="Whatsapp"
+          link={{ link: 'https://wa.me/34626591157?text=Hola%20quiero%20hacer%20una%20reserva', newTab: true }}
+        >
+          <Image width={50} style={{ height: '32px', width: 'auto' }} src={waIcon} alt={'whatsapp'} />
         </Button>
       </div>
     </section>
   </header>
+  <main>
+    <section id="localizacion">
+      <div>
+        <h2>LOCALIZACIÓN</h2>
+        <p>Nos encontramos en Torre del mar, muy cerca de la costa.</p>
+        <p>Disfruta de nuestras vistas a la playa.</p>
+      </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6394.664142163913!2d-4.093244600000001!3d36.7385996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7247be9d0d3fcf%3A0x5bb97f649ada83a4!2s29740%20Torre%20del%20Mar%2C%20M%C3%A1laga!5e0!3m2!1ses!2ses!4v1743685991885!5m2!1ses!2ses"
+        width="600"
+        height="450"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+  </main>
 </Layout>
 <style>
   header {
@@ -51,7 +60,8 @@ import { Image } from 'astro:assets'
     #historia {
       display: flex;
       flex-direction: column;
-      height: 284px;
+      min-height: 284px;
+      gap: 15px;
       justify-content: space-between;
       align-items: center;
     }
@@ -61,7 +71,9 @@ import { Image } from 'astro:assets'
     font-size: 5rem;
     color: var(--link);
     margin-top: -30px;
+    text-align: center;
   }
+
   p {
     text-align: center;
     max-width: 440px;
@@ -71,5 +83,39 @@ import { Image } from 'astro:assets'
     width: fit-content;
     display: flex;
     gap: 20px;
+  }
+  #localizacion {
+    display: flex;
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      justify-content: center;
+    }
+    h2 {
+      font-size: 2rem;
+      color: var(--link);
+      width: fit-content;
+    }
+    iframe {
+      border-radius: 5px;
+      max-height: 300px;
+    }
+  }
+  @media only screen and (max-width: 1111px) {
+    #localizacion {
+      max-width: 600px;
+      div {
+        width: auto;
+        align-items: center;
+      }
+    }
   }
 </style>
