--- a/src/pages/carta.astro
+++ b/src/pages/carta.astro
@@ -118,4 +118,14 @@ import Layout from '../layouts/Layout.astro'
       width: 100%;
     }
   }
+  @media only screen and (max-width: 335px) {
+    header {
+      h1 {
+        font-size: 2rem;
+        color: var(--link);
+        margin-top: -30px;
+        text-align: center;
+      }
+    }
+  }
 </style>
