--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -91,4 +91,10 @@ import Layout from '../layouts/Layout.astro'
   button:hover {
     background-color: var(--link-light);
   }
+  h1 {
+    font-size: 2rem;
+    color: var(--link);
+    margin-top: -30px;
+    text-align: center;
+  }
 </style>
