--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout>
-  <header>
+  <header style="margin-top: 40px;">
     <h1>CONTACTO</h1>
   </header>
   <main>
@@ -36,7 +36,6 @@ import Layout from '../layouts/Layout.astro'
     text-align: center;
     font-size: 5rem;
     color: var(--link);
-    margin-top: -30px;
   }
   .container {
     width: 100%;
