--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,9 @@
   box-sizing: border-box;
   transition: 200ms;
 }
+html {
+  background-color: var(--primary);
+}
 html,
 body {
   font-family: 'Oswald', sans-serif;
